added custom definitions for docker file to support testing

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
+    "test:prod": "ng test --no-watch --browsers=ChromeHeadless --code-coverage",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
